HTML and Style edits to the List Consent components.
#7186: Implement final html template for list consent page

--- a/client/app/consent/tmpl/consent-list-manage-options-modal-error.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-error.tpl.html
@@ -4,7 +4,6 @@
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
-        <div class="text-alert"><strong>ERROR: Invalid consent state. Please contact to system administrator.</strong>
-        </div>
+        <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system administrator.</div>
     </div>
 </div>
