--- a/client/app/consent/tmpl/consent-medical-information.tpl.html
+++ b/client/app/consent/tmpl/consent-medical-information.tpl.html
@@ -9,6 +9,14 @@
                 <p> <input type="radio" icheck class="m-r-xs" ng-model="consent.medicalInformation" value=""  name="medicalInformation" checked> <span class="m-l-xs"><strong>SHARE ALL</strong> information in my medical record.</span></p>
                 <p> <input type="radio" icheck  ng-model="consent.medicalInformation" value=""  name="medicalInformation"> <span class="m-l-xs m-r-sm"><strong>SHARE</strong> my medical record <strong>WITH EXCEPTION</strong> of specific information.</span><button type="button" class="btn btn-primary btn-xs" ng-click="MedicalInformationVm.openPrivacySettingsModal()">Edit</button></p>
             </div>
+            <div>
+                <div class="label label-info inline"><span class="fa fa-lock m-r-xs"></span>Allergies</div>
+                <div class="label label-info inline"><span class="fa fa-lock m-r-xs"></span>Medications</div>
+                <div class="label label-info inline"><span class="fa fa-lock m-r-xs"></span>Problems</div>
+                <div class="label label-info inline"><span class="fa fa-lock m-r-xs"></span>Results</div>
+                <div class="label label-info inline"><span class="fa fa-lock m-r-xs"></span>HIV/AIDS information sensitivity</div>
+            </div>
         </div>
+
     </div>
 </div>
