--- a/client/app/consent/tmpl/consent-list-manage-options-modal-revoked.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-revoked.tpl.html
@@ -4,12 +4,12 @@
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
-        <strong>I want to:</strong>
-        <ul class="list-group">
-            <li class="list-group-item"><button class="btn btn-success">View Signed Consent</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Export to XACML</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Try My Consent Settings against My Medical Record before Sharing</button></li>
-            <li class="list-group-item"><button class="btn btn-success">View Signed Revocation</button></li>
-        </ul>
+        <h3>I want to:</h3>
+        <div class="list-group">
+            <a href="#" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-folder-open fa-lg m-r-sm"></i>View Signed Revocation</h4></a>
+        </div>
     </div>
 </div>
