--- a/client/app/consent/tmpl/consent-list-manage-options-modal-saved.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-saved.tpl.html
@@ -4,14 +4,14 @@
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
-        <strong>I want to:</strong>
-        <ul class="list-group">
-            <li class="list-group-item"><button class="btn btn-success">Edit This Consent</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Preview This Consent</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Submit My Consent for Signing</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Export to XACML</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Try My Consent Settings against My Medical Record before Sharing</button></li>
-            <li class="list-group-item"><button class="btn btn-success">Delete This Consent</button></li>
-        </ul>
+        <h3>I want to:</h3>
+        <div class="list-group">
+            <a href="#" class="list-group-item"><h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+            <a href="#" class="list-group-item"><h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4></a>
+        </div>
     </div>
 </div>
