--- a/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
@@ -5,8 +5,14 @@
         </div>
         <div class="panel-body">
             <p>Choose for what purposes your medical information may be used.</p>
-            <div>
+            <p>
                 <span class="m-r-sm"><strong>SHARE</strong> my medical record ONLY for the selected purposes of use.</span> <button type="button" class="btn btn-primary btn-xs" ng-click="PurposeOfUseVm.openSelectPurposeModal()">Edit</button>
+            </p>
+            <div>
+                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Healthcare Treatment</div>
+                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Payment</div>
+                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Emergency Treatment</div>
+                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Research</div>
             </div>
         </div>
     </div>
