Add initial collapsed state configuration support to ibox tools directive
#7175: Implement list consent UI

--- a/client/app/consent/tmpl/consent-card.tpl.html
+++ b/client/app/consent/tmpl/consent-card.tpl.html
@@ -6,7 +6,7 @@
                     <div class="col-sm-12">
                         <h5>Authorized to share: <strong><span ng-bind="consent.toDiscloseName"/></strong> | Sharing with: <strong><span ng-bind="consent.isMadeToName"/></strong>
                         </h5>
-                        <div ibox-tools></div>
+                        <div ibox-tools init-collapsed="true"></div>
                      </div>
                     <div class="col-sm-12">
                         <h5 class="pull-right">Effective Date: <strong><span ng-bind="consent.consentStart | date"/></strong>
