--- a/client/app/consent/tmpl/consent-list-manage-options-modal-signed.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-signed.tpl.html
@@ -6,10 +6,10 @@
     <div class="modal-body">
         <h3>I want to:</h3>
         <div class="list-group">
-            <a href="#" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
-            <a href="#" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
-            <a href="#" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
-            <a href="#" class="list-group-item"><h4 ng-click="ManageConsentModalVm.revoke()"><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
+            <a href="" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
+            <a href="" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
+            <a href="" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+            <a href="" class="list-group-item" ng-click="ManageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
         </div>
     </div>
 </div>
