Persist selected authorize and disclosure provider. Disable the selected disclose or authorise provider in the authorize or disclose respectively. Open modal in medical information on selecting radio button.
 #7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
@@ -12,10 +12,9 @@
                     <div >
                         <div class="radio">
                             <label>
-                                <input type="checkbox" icheck  checklist-model="consent.selectedPurposeOfUse" checklist-value="purposeOfUse.code"  >
+                                <input type="checkbox" icheck  checklist-model="consent.selectedPurposeOfUseCodes" checklist-value="purposeOfUse.code"  >
                                 <span class="m-l-xs" ng-bind="purposeOfUse.displayName"></span>
                             </label>
-
                         </div>
                     </div>
                 </div>
