--- a/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
@@ -9,10 +9,10 @@
                 <span class="m-r-sm"><strong>SHARE</strong> my medical record ONLY for the selected purposes of use.</span> <button type="button" class="btn btn-primary btn-xs" ng-click="PurposeOfUseVm.openSelectPurposeModal()">Edit</button>
             </p>
             <div>
-                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Healthcare Treatment</div>
-                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Payment</div>
-                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Emergency Treatment</div>
-                <div class="label label-primary inline"><span class="fa fa-check m-r-xs"></span>Research</div>
+                <div class="label label-primary m-l-xs inline" ng-repeat="purposeOfUse in PurposeOfUseVm.selectedPurposeOfUse" >
+                    <span class="fa fa-check m-r-xs"></span>
+                    <span ng-bind="purposeOfUse.displayName"></span>
+                </div>
             </div>
         </div>
     </div>
