--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -29,11 +29,7 @@
             </li>
 
             <li ng-class="{active: $state.includes('consent')}" >
-                <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Consents</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" ng-class="{'in': $state.includes('consent')}">
-                    <li ui-sref-active="active"><a ui-sref="consent.list">List Consents</a></li>
-                    <li ui-sref-active="active"><a ui-sref="consent.create">Create Consent</a></li>
-                </ul>
+                <a ui-sref="consent.list"><i class="fa fa-user-md"></i> <span class="nav-label">Consents</span></a>
             </li>
 
             <li ng-class="{active: $state.includes('provider')}" >
