--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -33,11 +33,7 @@
             </li>
 
             <li ng-class="{active: $state.includes('provider')}" >
-                <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" ng-class="{'in': $state.includes('provider')}">
-                    <li ui-sref-active="active"><a ui-sref="provider.list">List Providers</a></li>
-                    <li ui-sref-active="active"><a ui-sref="provider.lookup">Search Providers</a></li>
-                </ul>
+                <a ui-sref="provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span></a>
             </li>
 
             <li ng-class="{active: $state.includes('patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()">
