Implement consent term directive
#7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-term.tpl.html
+++ b/client/app/consent/tmpl/consent-term.tpl.html
@@ -5,7 +5,7 @@
         </div>
         <div class="panel-body">
             <p>Enter a start and end date during wich your medical records will be shared.</p>
-            <div><span> Consent Start </span>  <span> Consent End </span></div>
+            <div class="input-daterange" datepicker-range fromlabel="Consent Start" tolabel="Consent End" ></div>
         </div>
     </div>
 </div>
