--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,8 @@
     <link id="loadBefore" href="assets/css/style.css" rel="stylesheet">
     <link  href="assets/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link  href="assets/css/plugins/angular-notify/angular-notify.min.css" rel="stylesheet">
-    
+    <link  href="assets/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+
     <!-- INSPINIA RELATED CSS END -->
     <!-- Custom styles for this template -->
     <!-- POC styles + vendor style-->
@@ -67,6 +68,7 @@
     <script  type="text/javascript" src="assets/js/plugins/iCheck/icheck.min.js"></script>
     <script  type="text/javascript" src="assets/js/angular/angular-messages.min.js"></script>
     <script  type="text/javascript" src="assets/js/plugins/angular-notify/angular-notify.min.js"></script>
+    <script  type="text/javascript" src="assets/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 
     <!-- TESTBED ANGULARJS RELATED -->
     <!-- compiled JavaScript -->
