Refactor consent status bar to use pp-block-text-bar classes instead of btn
#7175 - Implement list consent UI

--- a/client/app/consent/tmpl/consent-card.tpl.html
+++ b/client/app/consent/tmpl/consent-card.tpl.html
@@ -17,9 +17,9 @@
 
             <div class="ibox-content modified">
 
-                <div class="btn btn-block btn-sm btn-default">
+                <div class="pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
                     <span>
-                        Consent State: <strong><span ng-bind="ConsentCardVm.consentState(consent) | uppercase"/></strong>
+                        Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState(consent) | uppercase"/>
                     </span>
                 </div>
 
