Show an error notification if no consent exists in the list consent page
#7175: Implement list consent UI

--- a/client/app/consent/tmpl/consent-card-list.tpl.html
+++ b/client/app/consent/tmpl/consent-card-list.tpl.html
@@ -9,26 +9,26 @@
         </div>
     </div>
 </div>
-<div id="consent_list">
-    <div class="text-center">
-        <!--<pagination total-items="ConsentCardListVm.pagination.totalItems"-->
-                    <!--items-per-page="ConsentCardListVm.pagination.itemsPerPage"-->
-                    <!--ng-model="ConsentCardListVm.pagination.currentPage"-->
-                    <!--ng-change="ConsentCardListVm.loadPage()"-->
-                    <!--max-size="ConsentCardListVm.pagination.maxSize"-->
-                    <!--class="pagination-sm"-->
-                    <!--boundary-links="true"></pagination>-->
+<div class="row" id="consent_list" ng-if="ConsentCardListVm.hasConsents()">
+    <div class="col-sm-12">
+        <div ng-repeat="consent in ConsentCardListVm.consentList.consentList">
+            <consent-card consent="consent"/>
+        </div>
+        <div class="text-center">
+            <pagination total-items="ConsentCardListVm.pagination.totalItems"
+                        items-per-page="ConsentCardListVm.pagination.itemsPerPage"
+                        ng-model="ConsentCardListVm.pagination.currentPage"
+                        ng-change="ConsentCardListVm.loadPage()"
+                        max-size="ConsentCardListVm.pagination.maxSize"
+                        class="pagination-sm"
+                        boundary-links="true"></pagination>
+        </div>
     </div>
-    <div ng-repeat="consent in ConsentCardListVm.consentList.consents">
-        <consent-card consent="consent"/>
-    </div>
-    <div class="text-center">
-        <pagination total-items="ConsentCardListVm.pagination.totalItems"
-                    items-per-page="ConsentCardListVm.pagination.itemsPerPage"
-                    ng-model="ConsentCardListVm.pagination.currentPage"
-                    ng-change="ConsentCardListVm.loadPage()"
-                    max-size="ConsentCardListVm.pagination.maxSize"
-                    class="pagination-sm"
-                    boundary-links="true"></pagination>
+</div>
+<div class="row" ng-if="!ConsentCardListVm.hasConsents()">
+    <div class="col-sm-12">
+        <div class="alert alert-danger">
+            There are currently no Consents available. Please click the <a class="alert-link" ui-sref="consent.create">Add a Consent</a> button to create a new consent.
+        </div>
     </div>
 </div>
