--- a/client/app/consent/tmpl/consent-term.tpl.html
+++ b/client/app/consent/tmpl/consent-term.tpl.html
@@ -5,7 +5,9 @@
         </div>
         <div class="panel-body">
             <p>Enter a start and end date during wich your medical records will be shared.</p>
-            <div class="input-daterange" datepicker-range fromlabel="Consent Start" tolabel="Consent End" ></div>
+
+            <div class="input-daterange" datepicker-range ng-model="daterange" fromlabel="Consent Start"
+                 tolabel="Consent End"></div>
         </div>
     </div>
 </div>
