Change style of validation error message for consent term directive
#7178 - Implement create consent UI

--- a/client/common/tmpl/datepicker-range.tpl.html
+++ b/client/common/tmpl/datepicker-range.tpl.html
@@ -1,12 +1,15 @@
 <div>
-    <span ng-bind="fromlabel"></span></span>
-    <input type="text" class="input-small" name="start" ng-model="startDatePicker"/>
-    <span ng-bind="tolabel"></span>
-    <input type="text" class="input-small" name="end" ng-model="endDatePicker"/>
+    <div>
+        <span ng-bind="fromlabel"></span></span>
+        <input type="text" class="input-small" name="start" ng-model="startDatePicker"/>
+        <span ng-bind="tolabel"></span>
+        <input type="text" class="input-small" name="end" ng-model="endDatePicker"/>
+    </div>
 
     <div ng-show="showError">
-        <div class="alert">
-            <strong>Warning!</strong>{{error}}
+        <div class="alert alert-danger">
+            <strong>Warning!</strong>
+            {{error}}
         </div>
     </div>
 </div>
