--- a/client/app/consent/tmpl/consent-select-provider.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider.tpl.html
@@ -1,12 +1,11 @@
 <div class="panel panel-default" ng-click="SelectProviderVm.openSelectProviderModal()">
     <div class="panel-heading">
-        <div > {{::SelectProviderVm.fieldplaceholder}}:</div>
+        <div ng-bind="SelectProviderVm.fieldplaceholder"></div>
     </div>
     <div class="panel-body">
-        <div class="m-l" ng-if="SelectProviderVm.selectedProvider.npi">
+        <div class="m-l" ng-if="SelectProviderVm.selectedProvider">
             <span class="fa fa-user info-blue m-r-xs m-b-xs"></span>
             <span ng-bind="SelectProviderVm.selectedProvider | pcmProviderNameOrFacility"></span>
-            <!--Van Dongen, Monica-->
         </div>
     </div>
 </div>
