--- a/client/app/consent/tmpl/consent-card.tpl.html
+++ b/client/app/consent/tmpl/consent-card.tpl.html
@@ -4,12 +4,12 @@
             <div class="ibox-title modified panel-heading ">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h5>Authorized to share: <strong><span ng-bind="consent.toDiscloseName"/></strong> | Sharing with: <strong><span ng-bind="consent.isMadeToName"/></strong>
+                        <h5>Authorized to share: <strong><span ng-bind="ConsentCardVm.consent.toDiscloseName"/></strong> | Sharing with: <strong><span ng-bind="ConsentCardVm.consent.isMadeToName"/></strong>
                         </h5>
                         <div ibox-tools init-collapsed="true"></div>
                      </div>
                     <div class="col-sm-12">
-                        <h5 class="pull-right">Effective Date: <strong><span ng-bind="consent.consentStart | date"/></strong>
+                        <h5 class="pull-right">Effective Date: <strong><span ng-bind="ConsentCardVm.consent.consentStart | date"/></strong>
                         </h5>
                     </div>
                 </div>
@@ -19,68 +19,32 @@
 
                 <div class="pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
                     <span>
-                        Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState(consent) | uppercase"/>
+                        Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState() | uppercase"/>
                     </span>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6 m-b">
-                        <div ng-if="ConsentCardVm.isShareAll(consent)">
-                            <h3 class="border-bottom-red">Sharing all medical information:</h3>
+                        <div ng-if="ConsentCardVm.isShareAll()">
+                            <h3 class="border-bottom-blue">Sharing all medical information:</h3>
                             All my medical information can be shared.
                         </div>
-                        <div ng-if="!ConsentCardVm.isShareAll(consent)">
+                        <div ng-if="!ConsentCardVm.isShareAll()">
                             <h3 class="border-bottom-red">Medical Information NOT disclosed:</h3>
-                            <p><span ng-bind="ConsentCardVm.notDisclosedItems(consent)"/></p>
+                            <p><span ng-bind="ConsentCardVm.notDisclosedItems()"/></p>
                         </div>
                     </div>
                     <div class="col-md-6 m-b">
                         <h3 class="border-bottom-blue">Share for following purposes:</h3>
-                        <p><span ng-bind="ConsentCardVm.purposeOfUseItems(consent)"/></p>
+                        <p><span ng-bind="ConsentCardVm.purposeOfUseItems()"/></p>
                     </div>
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal(consent)">Manage Consent
+                    <button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal()">Manage Consent
                     </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<!--<div class="ibox float-e-margins">-->
-    <!--<div class="ibox-title">-->
-        <!--<h5>Authorized to share: <strong><span ng-bind="consent.toDiscloseName"/></strong> | Sharing with: <strong><span-->
-                <!--ng-bind="consent.isMadeToName"/></strong> | Effective Date: <strong><span-->
-                <!--ng-bind="consent.consentStart | date"/></strong>-->
-        <!--</h5>-->
-
-        <!--<div ibox-tools></div>-->
-    <!--</div>-->
-    <!--<div class="ibox-content">-->
-        <!--<div class="well">-->
-            <!--<h3>-->
-                <!--Consent State: <strong><span ng-bind="ConsentCardVm.consentState(consent) | uppercase"/></strong>-->
-            <!--</h3>-->
-        <!--</div>-->
-        <!--<div class="well">-->
-            <!--<div ng-if="ConsentCardVm.isShareAll(consent)">-->
-                <!--<h3>Sharing all medical information:</h3>-->
-                <!--All my medical information can be shared.-->
-            <!--</div>-->
-            <!--<div ng-if="!ConsentCardVm.isShareAll(consent)">-->
-                <!--<h3>Medical Information NOT disclosed:</h3>-->
-                <!--<span ng-bind="ConsentCardVm.notDisclosedItems(consent)"/>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="well">-->
-            <!--<h3>Share for following purposes:</h3>-->
-            <!--<span ng-bind="ConsentCardVm.purposeOfUseItems(consent)"/>-->
-        <!--</div>-->
-        <!--<div class="well">-->
-            <!--<button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal(consent)">Manage Consent-->
-            <!--</button>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
