Fix contrast error for save changes button
#7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-create-edit.tpl.html
+++ b/client/app/consent/tmpl/consent-create-edit.tpl.html
@@ -43,7 +43,7 @@
                 <div class="col-md-11">
                     <div class="pull-right">
                         <button class="btn btn-white m-r" type="reset">Cancel</button>
-                        <button class="btn btn-primary" type="submit">Save changes</button>
+                        <button class="btn btn-primary dark-green" type="submit">Save changes</button>
                     </div>
                 </div>
             </div>
