--- a/client/app/consent/tmpl/consent-term.tpl.html
+++ b/client/app/consent/tmpl/consent-term.tpl.html
@@ -6,8 +6,7 @@
         <div class="panel-body">
             <p>Enter a start and end date during wich your medical records will be shared.</p>
 
-            <div class="input-daterange" datepicker-range ng-model="daterange" fromlabel="Consent Start"
-                 tolabel="Consent End"></div>
+            <datepicker-range class="input-daterange"  ng-model="ConsentTermVm.daterange" fromlabel="Consent Start" tolabel="Consent End"></datepicker-range>
         </div>
     </div>
 </div>
