Add functions in the Provider service to filter out providers into individual or organizational.
 #7178 - Implement create consent UI

--- a/client/common/tmpl/datepicker-range.tpl.html
+++ b/client/common/tmpl/datepicker-range.tpl.html
@@ -1,8 +1,8 @@
 <div>
     <div>
-        <span ng-bind="fromlabel"></span></span>
+        <span ng-bind="DatePickerVm.fromlabel"></span></span>
         <input type="text" class="input-small" name="start" ng-model="DatePickerVm.consent.consentStart"/>
-        <span ng-bind="tolabel"></span>
+        <span ng-bind="DatePickerVm.tolabel"></span>
         <input type="text" class="input-small" name="end" ng-model="DatePickerVm.consent.consentEnd"/>
     </div>
 
